2015-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Add 'Minuit' class importing to the __init__.py file.

2015-05-05  Andy Buckley  <andy.buckley@cern.ch>

	* Rewrite C++ ipolstring parsing using STL string functions rather than Boost: shorter! Boost dependency GONE :-)

	* Replace boost::tuple with std::pair and clean up ParamPoints interface a bit.

	* Add a --veto option to prof-sample, for a user-specified vetoing function.

	* Move Sampler from prof-sample into professor2/__init__.py

2015-05-04  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a first version of prof-tune with ipol reading from file.

	* Adding options for (average) error interpolation and ipol persistency to prof-ipol and module functions.

2015-05-03  Andy Buckley  <andy.buckley@cern.ch>

	* Add bin/prof-ipol simple script using the functions below -- to be merged with prof-interpolate.

	* professor2/__init__.py: Add Histo, DataBin, IpolBin and basic data handling functions.

	* Remove unnecessary dlopen fiddling from professor2/__init__.py

2015-04-23  Andy Buckley  <andy.buckley@cern.ch>

	* Remove bound ParamPoints pointer from Ipol, and ditch lazy coeff evaluation in favour of simplicity and construct-time coeff calculating.

	* Move long vector and coeff building into unbound functions rather than Ipol methods.

	* Start of ChangeLog. Library has already iterated quite a bit.

	* FILL IN EARLY HISTORY FROM HG LOG